<resources>
    <string name="app_name">Pomodoro</string>
    <string name="home">Главная</string>
    <string name="Start">Старт</string>
    <string name="TimerInitialTime">25:00</string>
    <string name="FinishTimer">Завершить</string>
    <string name="ConfirmFinishTimer">Подтверждение завершения</string>
    <string name="AreYouSureToFinishTimer">Завершить таймер</string>
    <string name="Yes">Да</string>
    <string name="No">Нет</string>
    <string name="settings">Настройки</string>
    <string name="statistics">Статистика</string>
    <string name="statistics_previous_day">Предыдущий день</string>
    <string name="statistics_next_day">Следующий день</string>
    <string name="statistics_empty">Нет помидоров за этот день</string>
    <string name="statistics_unlabeled">Помидорки</string>
    <string name="statistics_unlabeled_entry">помидорка</string>
    <string name="statistics_without_label">Без метки</string>
    <string name="statistics_history">История</string>
    <string name="statistics_day_title">Статистика за день</string>
    <string name="statistics_total">Всего: %1$s</string>
    <string name="time_label">Время</string>
    <string name="tasks_today">Задачи на сегодня</string>
    <string name="number_of_pomodoros">Помидоров за день</string>
    <string name="pomodoro_duration_minutes">Длительность</string>
    <string name="save">Сохранить настройки</string>
    <string name="enterCorrectSettings">Пожалуйста, введите корректные значения</string>
    <string name="settings_saved">Настройки сохранены</string>
    <string name="pomodoro_count_label">Количество помидоров за день</string>
    <string name="pomodoro_duration_label">Длительность помидора в минутах</string>
    <string name="pomodoro_labels_checkbox">Помидоры с метками</string>
    <string name="pomodoro_label_dialog_title">Метка помидора</string>
    <string name="pomodoro_label_hint">До 15 символов</string>
    <string name="withTomato">С помидором</string>
    <string name="withoutTomato">Без помидора</string>
    <string name="cancel">Отмена</string>
    <string name="version_info">Version: %1$s\nCommit: %2$s</string>
    <string name="pomodoro_finished_title">Помидорка готова!</string>
    <string name="pomodoro_finished_text">Время перерыва. Нажмите для продолжения.</string>
    <string name="timer_running_title">Помидорка в процессе</string>
    <string name="timer_running_text">Таймер продолжит работать в фоне.</string>
    <string name="timer_running_channel_name">Активный таймер Помидора</string>
    <string name="timer_running_channel_description">Постоянное уведомление, пока идёт рабочий интервал.</string>
    <string name="channel_name">Таймер Помидора (Оповещения)</string>
    <string name="channel_description">Звуковые и вибрационные оповещения о завершении рабочего интервала.</string>
    <string name="exact_alarm_permission_message">Для корректной работы таймера в фоновом режиме (точное срабатывание) необходимо предоставить разрешение \"Точные будильники\".</string>
    <string name="permission_required">Требуется разрешение ⏰</string>
    <string name="open_settings">Перейти к настройкам</string>
    <string name="alarm_permission_denied">Точное время завершения таймера без разрешения не гарантируется.</string>
</resources>
