<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AreYouSureToFinishTimer"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/with_tomato_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/withTomato"/>

    <Button
        android:id="@+id/without_tomato_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/withoutTomato"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="8dp"/>
</LinearLayout>
